# apps/betfair-live-prices/pyproject.toml

[project]
name = "betfair-live-prices"  
version = "0.1.0"        
description = "Get live prices from Betfair."
requires-python = ">=3.11"

dependencies = [
    "api-helpers"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"] 
build-backend = "setuptools.build_meta"

# Optional: Add development dependencies if this app needs specific ones for its tests, linting, etc.
[project.optional-dependencies]
dev = [
    "pytest", 
    "black",  
    "ruff",
    "isort",
    "autoflake",
]