[project]
name = "betting-bot"
version = "0.1.0"
description = "AI-powered betting bot using LangGraph and LangChain"
requires-python = ">=3.11"
dependencies = [
    "langgraph[all]",
    "langgraph-prebuilt",
    "langgraph-sdk",
    "langgraph-checkpoint-sqlite",
    "langsmith",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-ollama",
    "notebook",
    "tavily-python",
    "wikipedia",
    "trustcall",
    "langgraph-cli[inmem]",
    "api-helpers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/betting_bot"]
