[project]
name = "comment-labeler"
version = "0.1.0"
description = "Gemini-based comment labeling for horse racing analysis"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "dash",
    "dash-bootstrap-components"

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
